--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -6,7 +6,7 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:background="@drawable/ic_background"
 android:orientation="vertical"
-tools:context=".activities.SignUpActivity">
+tools:context=".ui.activities.SignUpActivity">
 
 <androidx.appcompat.widget.Toolbar
     android:id="@+id/toolbar_sign_up_activity"
