--- a/app/src/main/res/layout/activity_create_board.xml
+++ b/app/src/main/res/layout/activity_create_board.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activities.CreateBoardActivity">
+    tools:context=".ui.activities.CreateBoardActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
