--- a/app/src/main/res/drawable/shape_button_rounded.xml
+++ b/app/src/main/res/drawable/shape_button_rounded.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--All the values used are defined in the constant files.-->
+<?xml version="1.0" encoding="utf-8"?><!--All the values used are defined in the constant files.-->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
