--- a/app/src/main/res/drawable/white_border_shape_button_rounded.xml
+++ b/app/src/main/res/drawable/white_border_shape_button_rounded.xml
@@ -2,10 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <stroke android:color="#0C90F1"
-        android:width="1dp"/>
+    <stroke
+        android:color="#0C90F1"
+        android:width="1dp" />
 
-    <solid android:color="@android:color/white"/>
+    <solid android:color="@android:color/white" />
 
     <corners android:radius="10dp" />
 </shape>
